# signalstashrs

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  out.pb
.github/workflows/: ci.yml  docker-sign.yml
charts/signalstashrs/: Chart.yaml  values.yaml
charts/signalstashrs/templates/: NOTES.txt  _helpers.tpl  certificate.yaml  deployment.yaml  hpa.yaml  ingress.yaml  rate-limit-middleware.yaml  service.yaml  serviceaccount.yaml
charts/signalstashrs/templates/tests/: test-connection.yaml
doc/adr/: ADR-001: SPL IoT Sensor Ingestion Architecture.md
proto/: sensor.proto
scripts/: create_admin_key.rs
src/: app_state.rs  application.rs  config.rs  error_utils.rs  lib.rs  main.rs  redis.rs  sensor.rs
src/auth/: api_key.rs  mod.rs
src/consts/: env.rs  errors.rs  health.rs  messages.rs  mod.rs  redis.rs  routes.rs
src/routes/: apikeys.rs  health.rs  ingest.rs  mod.rs
test/http/: testery.http
tests/: health.rs
tests/http/: testery.http
