[package]
name = "signalstashrs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
prost = "0.12"
prost-types = "0.12"
redis = { version = "0.25", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.98"

[build-dependencies]
prost-build = "0.12"
anyhow = "1.0.98"
