[package]
name = "signalstashrs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.7"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde", "clock"] }
hyper = { version = "1", features = ["full"] }
prost = "0.12"
prost-types = "0.12"
rand = "0.8"
redis = { version = "0.25", features = ["tokio-comp", "aio", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
anyhow = "1.0.98"
prost-build = "0.12"
